--- a/IAMComedian/windows/CMakeLists.txt
+++ b/IAMComedian/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(tugas1 LANGUAGES CXX)
+project(iamcomedian LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "tugas1")
+set(BINARY_NAME "iamcomedian")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
